--- a/index.Rmd
+++ b/index.Rmd
@@ -17,6 +17,30 @@ data is collected from research station in Antarctica. There are two datasets.
 
 ## Single trait distribution
 
+
+The penguins of Biscoe island show the most variable bill length. 
+
+```{r}
+ggplot(data = penguins) + geom_histogram(mapping = aes(x = bill_length_mm)) + facet_wrap("island")
+```
+
+
 ## Relationship between multiple traits 
 
+Body mass and flipper length has a positive relationship in penguins. 
+
+```{r}
+ggplot(data = penguins) + 
+  geom_point(mapping = aes(x = flipper_length_mm, y = body_mass_g, color = species)) 
+```
+
+
 ## Sexual dimorphism 
+
+Female penguins have shorter bills than male penguins. The greatest level of sexual dimorphism seems the largest in the Chinstrap species. 
+
+```{r}
+ggplot(data = penguins) + geom_boxplot(aes(x=sex, y=bill_length_mm)) +facet_wrap("species")
+
+```
+
